Fix spacing for image overlay

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -32,8 +32,11 @@
 
   > div {
     position: absolute;
-    bottom: 8px;
-    left: 16px;
+    inset: auto 16px 12px;
+
+    > * {
+      margin: 0;
+    }
   }
 }
 
